@@ -1,7 +1,10 @@
 2005-01-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/beam.cc (consider_auto_knees): add beam height to
+	threshold. Fixes: knee-multiple-beam.ly
+
 	* lily/instrument-name-engraver.cc (acknowledge_grob): also ignore
-	pedal line spanners.
+	pedal line spanners. Fixes: instrument-center-pedal.ly
 
 	* lily/auto-beam-engraver.cc (acknowledge_grob): stop beam
 	if encountering barline. Fixes: auto-beam-repeat.ly
